<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UOBAPP</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="taskContent_str">Content of Timetable</string>
    <string name="accountsContent_str">Chat interface</string>
    <string name="sendedContent_str">Others</string>
    <string name="btn_newTimetable">New Timetable</string>
    <string name="btn_importTimetable">Import Timetable</string>
    <string name="txtV_timetable">Timetable</string>
    <string name="txtV_contacts">Contacts</string>
    <string name="txtV_test">Test</string>
    <string name="title_activity_lecture_creation">LectureCreationActivity</string>
    <!-- Lecture creation start -->
    <string name="txtV_enterLectureName">Lecture Name:</string>
    <string name="txtV_enterLectureNameHint">Lecture Name</string>
    <string name="txtV_enterLecturerName">Lecturer Name:</string>
    <string name="txtV_enterLecturerNameHint">Lecturer Name</string>
    <string name="txtV_enterWeekDay">Weekday:</string>
    <string name="txtV_enterTimeFrom">Time from:</string>
    <string name="txtV_enterTimeTo">Time to:</string>
    <string name="txtV_enterLocation">Location:</string>
    <string name="txtV_enterLocationHint">Lecture location</string>
    <string name="txtV_enterNote">Note:</string>
    <string name="txtV_enterNoteHint">Notes</string>
    <string name="btn_saveLecture">Save</string>
    <!-- Lecture creation end -->

    <string name="title_activity_task">Task</string>
    
    <string name="prompt_sid">Student ID</string>
    <string name="prompt_password">Password</string>

</resources>